# novelwriter-T

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
.trellis/: workflow.md
alembic/versions/: 033_user_events_allow_anonymous_attribution.py  034_add_continuation_runs.py  035_add_novel_ingest_jobs.py  036_add_world_generation_runs_and_continuation_semantic_key.py  037_backfill_bootstrap_initialized_column.py
app/: cli.py  config.py  database.py  language.py  language_policy.py  logging_setup.py  main.py  models.py  schemas.py  selfhost_db_bootstrap.py  version.py
app/api/: auth.py  copilot.py  lorebook.py  novel_chapters.py  novel_continuation_context.py  novel_continuation_runtime.py  novel_continuations.py  novel_status.py  novel_support.py  novel_uploads.py  (+9 more)
docs/: OPTIMIZATION.md
rust/state_proto/: Cargo.toml
rust/state_proto/src/: core.rs  lib.rs
rust/state_proto/src/core/: claim.rs  incremental.rs  mention.rs  payload.rs  segment.rs
scripts/: analyze_bootstrap_shortlist_failures.py  build_state_proto_rust.sh  ensure_state_proto_extension.sh  eval_bootstrap_shortlist.py  profile_bootstrap_refinement.py  profile_state_index_proto.py  run_playwright_integration_backend.sh  selfhost_smoke.sh  setup_python_env.sh  sync_nov_wr_context_workflow.py  uv_run.sh
tests/: conftest.py  test_access_health.py  test_ai_client.py  test_chapter_crud.py  test_config_provider_validation.py  test_continue_endpoint.py  test_continue_quota.py  test_github_oauth_login.py  test_hosted_beta_funnel.py  test_hosted_byok_contract.py  test_invite_quota.py  test_language_policy.py  test_llm_semaphore.py  test_logging_environment.py  test_main_spa_static.py  test_novwr_cli.py  test_parser.py  test_release_pipeline_contract.py  test_seed_demo.py  test_selfhost_db_bootstrap.py
web/: index.html  package-lock.json  package.json  playwright.capture.config.ts  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.setup.ts
(+390 files in other folders)
