[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novwr"
version = "0.3.1"
description = "Long-form novel writing engine with world-model-driven generation."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.109.0",
    "msgpack>=1.0.8",
    "openai>=1.50.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pyahocorasick>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.36",
    "structlog>=24.1.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
novwr = "app.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff",
]
hosted-proxy = [
    "aiohttp>=3.13.5",
    "cryptography>=46.0.6",
    "litellm[proxy,google]==1.82.0",
]

[tool.uv]
package = true
required-version = "==0.10.4"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.core.indexing" = ["data/*.txt", "data/*.tsv"]

[tool.pytest.ini_options]
markers = [
    "contract: tests for deferred/unimplemented modules (update_detector, explorations)",
    "e2e_llm: real provider end-to-end LLM tests",
]
addopts = "-m 'not contract'"
