[package]
name = "novwr-state-proto-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_novwr_state_proto"
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1.1"
jieba-rs = "0.7"
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py313"] }
rmp-serde = "1.3.0"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "2.0"
unicode-normalization = "0.1"
unicode-casefold = "0.2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
